--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "parcel": "^2.15.2"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "node-fetch": "^3.3.2",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "tailwindcss": "^4.1.11"
   }
 }
