--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "parcel": "^2.15.2"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.11",
     "cors": "^2.8.5",
     "express": "^5.1.0",
@@ -28,6 +29,7 @@
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
     "tailwindcss": "^4.1.11"
   }
